B-F Backup Sandbox 30.4.12/src/objects/Depletion_Reporting__c.object
<CustomObject>
    <description>Used for Brand Depletion Reporting

Record Key = Region/Brand/Date (i.e. UKSOCO20110801) Date(YYYYMMDD)</description>
    <fields>
        <fullName>Brand_Minor__c</fullName>
        <description>Brand Minor</description>
        <label>Brand Minor</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brand__c</fullName>
        <description>Brand Text</description>
        <label>Brand</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Budget_Depletions_Month__c</fullName>
        <description>Budget Depletion&apos;s (Month)</description>
        <label>Budget Depletions (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>Date</description>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DeplDate__c</fullName>
        <formula>Date__c -1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DeplDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Depletion_Reporting_Name__c</fullName>
        <externalId>true</externalId>
        <label>Depletion Reporting Name</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Estimated_Depletions_Month__c</fullName>
        <description>Estimated Depletions (Month)</description>
        <label>Estimated Depletions (Month)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MTD_Depletions__c</fullName>
        <description>MTD Depletions - this should actually read Shipments (Sam 10-18-11)</description>
        <label>MTD Shipments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Region</description>
        <label>Region</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Version__c</fullName>
        <description>Version</description>
        <label>Version</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X12_mo_MAT__c</fullName>
        <label>12 mo MAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X3_mo_MAT__c</fullName>
        <label>3 mo MAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>X6_mo_MAT__c</fullName>
        <label>6 mo MAT</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Depletion Reporting</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Depletion_Reporting_Name__c</columns>
        <columns>Brand__c</columns>
        <columns>Brand_Minor__c</columns>
        <columns>Region__c</columns>
        <columns>Version__c</columns>
        <columns>Date__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>DR-{0}</displayFormat>
        <label>Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Depletion Reporting</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>